# QuantityMeasurementCPP

./: CMakeLists.txt
main/model/: Feet.cpp  Feet.h  Length.cpp  Length.h  QuantityMeasurement.cpp  QuantityMeasurement.h
main/utility/: TypesOfUnit.h  Unit.cpp  Unit.h
test/: FeetTest.cpp  LengthTest.cpp  QuantityMeasurementTest.cpp
